# yew-portfolio

./: Cargo.toml  README.md  index.css  index.html
src/: main.rs
src/components/: job.rs  mod.rs  projects.rs  skills.rs
src/components/data/: freelance_resp.html  freelance_story.html  freelance_tech.html  gheotech_resp.html  gheotech_story.html  gheotech_tech.html  home_demo.rs  ibm_resp.html  ibm_story.html  ibm_tech.html  kape_resp.html  kape_story.html  kape_tech.html  vodafone_resp.html  vodafone_story.html  vodafone_tech.html
src/pages/: contact.rs  cv.rs  home.rs  mod.rs  projects.rs  skills.rs
