[package]
name = "yew-portfolio"
version = "0.1.0"
authors = ["Gheorghe Technologies SRL"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
gloo-console = "0.2.1"
gloo-timers = "0.2.4"
gloo-utils = "0.1"
log = "0.4"
wasm-bindgen-futures = "0.4.31"
wasm-logger = "0.2"
web-sys = "0.3.58"
yew = { version = "0.19" }
yew-router = "0.16"
